Bug 983570 - Update aState.mPrevChild only when line->IsDirty is true in nsBlockFrame::ReflowDirtyLines. r=mats